# CATL-dashboard

./: .env  AGENTS.md  DESIGN.md  MEMORY.md  ai_strategy.py  aisc_dashboard_metrics.py  aisc_policy_bridge_v2.py  check_news.py  check_risk_csv.py  company_disclosure_ingestion.py  cost_curve.py  dashboard.py  dashboard.py.notepad-fix-20260602-210322.bak  dashboard1201.py  dashboard1212.py  dashboard1220.py  dashboard125.py  dashboard1603.py  dashboard2304.py  dashboard618.py  dashboard_data_contract.py  database.py  document_market_inputs.py  event_risk.py  geocode_missing_projects.py  global_mines_pipeline.py  gpt_codex_gate_demo.py  iea_policy_ingestion.py  install_argos_en_zh.py  investment_engine.py  investment_strategy_rebalance_v2.py  main.py  market_data.py  news_fetch.py  news_ingestion.py  news_pipeline - 副本.py  news_pipeline.py  news_pipeline.py.notepad-fix-20260601-153751.bak  normalize_dashboard_data.py  policy_adjusted_price_scenarios.py  (+19 more)
.codex/: config.toml
.streamlit/: config.toml
build-a-complete-etl-pipeline-for/: .env.example  README.md  pyproject.toml  requirements.txt
build-a-complete-etl-pipeline-for/config/: cost_curve.seed.csv  mining_projects.seed.csv
build-a-complete-etl-pipeline-for/sql/: schema.sql
build-a-complete-etl-pipeline-for/src/lithium_intel/: __init__.py  cli.py  config.py  db.py  jobs.py  logging_config.py  news_api.py  risk.py  transforms.py
build-a-complete-etl-pipeline-for/tests/: test_risk.py
data/: __init__.py  loader.py  schema.py
engine/: __init__.py  aisc_engine.py  policy_engine.py
reports/: risk_summary.csv  (+33 more)
(+5 files in other folders)
