[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithium-resource-intel-etl"
version = "0.1.0"
description = "ETL pipeline for global lithium resource intelligence."
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

